force-app/main/default/objects/Opportunity/fields/Amount_Sold__c.field-meta.xml
<CustomField>
    <fullName>Amount_Sold__c</fullName>
    <label>Amount Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>