force-app/main/default/objects/Opportunity/fields/Architect_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Architect_Account_ID__c</fullName>
    <formula>Specifier__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Account ID</label>
    <type>Text</type>
</CustomField>