force-app/main/default/objects/Opportunity/fields/Architect_Account_Searchable__c.field-meta.xml
<CustomField>
    <fullName>Architect_Account_Searchable__c</fullName>
    <inlineHelpText>Used solely to allow for Global Search on the Architect Account name associated with the Opportunity.</inlineHelpText>
    <label>Architect Account Searchable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>