force-app/main/default/objects/Opportunity/fields/Architect_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Architect_Contact_ID__c</fullName>
    <formula>Specifier_Primary_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Contact ID</label>
    <type>Text</type>
</CustomField>