force-app/main/default/objects/Opportunity/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central Warehouse 038</fullName>
            </value>
            <value>
                <fullName>Chattanooga 035</fullName>
            </value>
            <value>
                <fullName>Cincinnati 065</fullName>
            </value>
            <value>
                <fullName>Elk Grove Village 085</fullName>
            </value>
            <value>
                <fullName>Evansville 050</fullName>
            </value>
            <value>
                <fullName>Fishers 055</fullName>
            </value>
            <value>
                <fullName>Fort Wayne 070</fullName>
            </value>
            <value>
                <fullName>Grand Rapids 080</fullName>
            </value>
            <value>
                <fullName>Johnson City 033</fullName>
            </value>
            <value>
                <fullName>Knoxville 037</fullName>
            </value>
            <value>
                <fullName>Lexington 060</fullName>
            </value>
            <value>
                <fullName>Louisville 040</fullName>
            </value>
            <value>
                <fullName>Nashville 030</fullName>
            </value>
            <value>
                <fullName>National Accounts 039</fullName>
            </value>
            <value>
                <fullName>South Bend 075</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>