force-app/main/default/objects/Opportunity/fields/Builder__c.field-meta.xml
<CustomField>
    <fullName>Builder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Builder)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>