force-app/main/default/objects/Opportunity/fields/Builder_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Builder_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder - Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Builder - Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>