force-app/main/default/objects/Opportunity/fields/Builder_Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Builder_Primary_Contact_Id__c</fullName>
    <formula>Builder_Primary_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Builder - Primary Contact Id</label>
    <type>Text</type>
</CustomField>