force-app/main/default/objects/Opportunity/fields/CaseSafe_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_Opportunity_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe Opportunity ID</label>
    <type>Text</type>
</CustomField>