force-app/main/default/objects/Opportunity/fields/Central_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Central_Purchasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Central Purchasing</label>
    <type>Checkbox</type>
</CustomField>