force-app/main/default/objects/Opportunity/fields/Confirm_Amount_Result__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Amount_Result__c</fullName>
    <inlineHelpText>At time of closing the Opportunity, you MUST confirm that the current Amount entered is accurate and then select a result here.  If the amount is NOT accurate, please update before marking the Oppty as Sold.</inlineHelpText>
    <label>Confirm Amount Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checked - No Update Needed</fullName>
            </value>
            <value>
                <fullName>Checked - Lowered Amount</fullName>
            </value>
            <value>
                <fullName>Checked - Raised Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>