force-app/main/default/objects/Opportunity/fields/Construction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Start_Date__c</fullName>
    <label>Construction Start Date</label>
    <type>Date</type>
</CustomField>