force-app/main/default/objects/Opportunity/fields/Creator_Name__c.field-meta.xml
<CustomField>
    <fullName>Creator_Name__c</fullName>
    <label>Creator Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>