force-app/main/default/objects/Opportunity/fields/Customer_Account_Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Primary_Contact_Id__c</fullName>
    <formula>Purchasing_Account_Primary_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account - Primary Contact Id</label>
    <type>Text</type>
</CustomField>