force-app/main/default/objects/Opportunity/fields/Dancik_Order_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Dancik_Order_Numbers__c</fullName>
    <inlineHelpText>List relevant Dancik Order Numbers for this opportunity</inlineHelpText>
    <label>Dancik Order Numbers</label>
    <type>TextArea</type>
</CustomField>