force-app/main/default/objects/Opportunity/fields/Dancik_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Dancik_Quote_Number__c</fullName>
    <label>Dancik Quote Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>