force-app/main/default/objects/Opportunity/fields/Deal_Registered_with_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registered_with_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Registered with Vendor</label>
    <type>Checkbox</type>
</CustomField>