force-app/main/default/objects/Opportunity/fields/Deal_Registration_Reviewed_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Reviewed_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Registration Reviewed/Finalized</label>
    <type>Checkbox</type>
</CustomField>