force-app/main/default/objects/Opportunity/fields/Designer__c.field-meta.xml
<CustomField>
    <fullName>Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interior designer on the opportunity</description>
    <label>Designer Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Architect - Designer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities - Designer</relationshipLabel>
    <relationshipName>OpportunitiesDesigner</relationshipName>
    <type>Lookup</type>
</CustomField>