force-app/main/default/objects/Opportunity/fields/Designer_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Designer_Account_ID__c</fullName>
    <formula>Designer__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designer Account ID</label>
    <type>Text</type>
</CustomField>