force-app/main/default/objects/Opportunity/fields/Designer_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Designer_Account_Owner__c</fullName>
    <formula>Designer__r.Owner.FirstName &amp; &apos; &apos; &amp; Designer__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designer Account Owner</label>
    <type>Text</type>
</CustomField>