force-app/main/default/objects/Opportunity/fields/Designer_Account_Searchable__c.field-meta.xml
<CustomField>
    <fullName>Designer_Account_Searchable__c</fullName>
    <inlineHelpText>Used solely to allow for Global Search on the Designer Account name associated with the Opportunity.</inlineHelpText>
    <label>Designer Account Searchable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>