force-app/main/default/objects/Opportunity/fields/Designer_Owner__c.field-meta.xml
<CustomField>
    <fullName>Designer_Owner__c</fullName>
    <formula>Designer__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designer Owner</label>
    <type>Text</type>
</CustomField>