force-app/main/default/objects/Opportunity/fields/Designer_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Designer_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual contact for interior designer on the opportunity</description>
    <label>Designer - Primary Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Architect &amp; Designer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities - Designer Primary Contact</relationshipLabel>
    <relationshipName>OpportunitiesDesigner</relationshipName>
    <type>Lookup</type>
</CustomField>