force-app/main/default/objects/Opportunity/fields/Designer_Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Designer_Primary_Contact_Id__c</fullName>
    <formula>Designer_Primary_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designer - Primary Contact Id</label>
    <type>Text</type>
</CustomField>