force-app/main/default/objects/Opportunity/fields/Distributor_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Commission_Amount__c</fullName>
    <label>Distributor Commission Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>