force-app/main/default/objects/Opportunity/fields/Dodge_or_CMD_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Dodge_or_CMD_Project_Number__c</fullName>
    <label>Dodge or CMD Project Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>