force-app/main/default/objects/Opportunity/fields/Dodge_or_CMD_URL__c.field-meta.xml
<CustomField>
    <fullName>Dodge_or_CMD_URL__c</fullName>
    <inlineHelpText>Link to the related Project Report for the selected Opportunity.  Manually copy and paste the Project Report URL from the McGraw-Hill Dodge Construction Network or CMD Insight</inlineHelpText>
    <label>Dodge or CMD Project URL</label>
    <type>Url</type>
</CustomField>