force-app/main/default/objects/Opportunity/fields/Estimated_Cost_per_Location__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_per_Location__c</fullName>
    <label>Estimated Sales per Location</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>