force-app/main/default/objects/Opportunity/fields/Estimated_Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Locations__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Estimated # of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>