force-app/main/default/objects/Opportunity/fields/Explanation_for_Lost_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Explanation_for_Lost_Opportunity__c</fullName>
    <label>Lost Reason Details</label>
    <type>TextArea</type>
</CustomField>