force-app/main/default/objects/Opportunity/fields/Franchisee__c.field-meta.xml
<CustomField>
    <fullName>Franchisee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Franchisee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Franchisee)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>