force-app/main/default/objects/Opportunity/fields/Franchisee_Id__c.field-meta.xml
<CustomField>
    <fullName>Franchisee_Id__c</fullName>
    <formula>Franchisee__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franchisee Id</label>
    <type>Text</type>
</CustomField>