force-app/main/default/objects/Opportunity/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities - General Contractor</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>