force-app/main/default/objects/Opportunity/fields/General_Contractor_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor - Primary Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.General_Contractor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities - General Contractor Primary Contact</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>