force-app/main/default/objects/Opportunity/fields/General_Contractor_Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor_Primary_Contact_Id__c</fullName>
    <formula>General_Contractor_Primary_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>General Contractor - Primary Contact Id</label>
    <type>Text</type>
</CustomField>