force-app/main/default/objects/Opportunity/fields/Inactive_Product_Alert__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Product_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Product Alert</label>
    <type>Checkbox</type>
</CustomField>