force-app/main/default/objects/Opportunity/fields/Installer__c.field-meta.xml
<CustomField>
    <fullName>Installer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field ONLY if the installer is not the purchasing account (i.e. the homeowner is purchasing the tile themselves)</inlineHelpText>
    <label>Installer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Installer)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>