force-app/main/default/objects/Opportunity/fields/Installer_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Installer_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer - Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Installer - Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>