force-app/main/default/objects/Opportunity/fields/Installer_Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Installer_Primary_Contact_Id__c</fullName>
    <formula>Installer_Primary_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer - Primary Contact Id</label>
    <type>Text</type>
</CustomField>