force-app/main/default/objects/Opportunity/fields/Is_Project_Negotiated__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Negotiated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box is the project specification is being negotiated with the contractor.</inlineHelpText>
    <label>Is Project Negotiated?</label>
    <type>Checkbox</type>
</CustomField>