force-app/main/default/objects/Opportunity/fields/Is_Project_Value_Engineered__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Value_Engineered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this project is in a &quot;Value Engineering&quot; stage, where the project budget is being reduced, please check this box.</inlineHelpText>
    <label>Is Project Value Engineered?</label>
    <type>Checkbox</type>
</CustomField>