force-app/main/default/objects/Opportunity/fields/Is_vendor__c.field-meta.xml
<CustomField>
    <fullName>Is_vendor__c</fullName>
    <label>Is vendor</label>
    <summaryForeignKey>Vendors_and_Series__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>