force-app/main/default/objects/Opportunity/fields/Job_Registration_Send__c.field-meta.xml
<CustomField>
    <fullName>Job_Registration_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Registration Send</label>
    <type>Checkbox</type>
</CustomField>