force-app/main/default/objects/Opportunity/fields/Job_Registration_Sent__c.field-meta.xml
<CustomField>
    <fullName>Job_Registration_Sent__c</fullName>
    <description>Date the Job Registration was sent</description>
    <label>Job Registration Sent</label>
    <type>Date</type>
</CustomField>