force-app/main/default/objects/Opportunity/fields/Landscape_outside_kitchens__c.field-meta.xml
<CustomField>
    <fullName>Landscape_outside_kitchens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landscape (outside kitchens)</label>
    <type>Checkbox</type>
</CustomField>