force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disqualified - LT Decision</fullName>
            </value>
            <value>
                <fullName>Lack of fit - Dealer Decision</fullName>
            </value>
            <value>
                <fullName>Abandoned/Cancelled</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>