force-app/main/default/objects/Opportunity/fields/Louisville_Tile_Specified__c.field-meta.xml
<CustomField>
    <fullName>Louisville_Tile_Specified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Louisville Tile Specified:</label>
    <type>Checkbox</type>
</CustomField>