force-app/main/default/objects/Opportunity/fields/NA_Project__c.field-meta.xml
<CustomField>
    <fullName>NA_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NA Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>National Account Build</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>National Account Project</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>