force-app/main/default/objects/Opportunity/fields/Neglected_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Neglected_Opportunity__c</fullName>
    <formula>if ( datevalue(LastModifiedDate) &lt;  Today_90__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Neglected Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>