force-app/main/default/objects/Opportunity/fields/Neighborhood_Development__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_Development__c</fullName>
    <label>Neighborhood / Development</label>
    <length>45</length>
    <type>Text</type>
</CustomField>