force-app/main/default/objects/Opportunity/fields/New_Construction__c.field-meta.xml
<CustomField>
    <fullName>New_Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Construction</label>
    <type>Checkbox</type>
</CustomField>