force-app/main/default/objects/Opportunity/fields/Noteworthy_Project__c.field-meta.xml
<CustomField>
    <fullName>Noteworthy_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if project is worth adding to social media.</description>
    <label>Noteworthy Project</label>
    <type>Checkbox</type>
</CustomField>