force-app/main/default/objects/Opportunity/fields/Number_of_Location__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Location__c</fullName>
    <label># of Build Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>