force-app/main/default/objects/Opportunity/fields/Onsite_Date__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Date__c</fullName>
    <label>Onsite Date</label>
    <type>Date</type>
</CustomField>