force-app/main/default/objects/Opportunity/fields/Open_Spec_Project__c.field-meta.xml
<CustomField>
    <fullName>Open_Spec_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Spec Project</label>
    <type>Checkbox</type>
</CustomField>