force-app/main/default/objects/Opportunity/fields/Opp_Status__c.field-meta.xml
<CustomField>
    <fullName>Opp_Status__c</fullName>
    <formula>IF(IsWon, &quot;Won&quot;,
IF(IsClosed, &quot;Lost&quot;,
&quot;Open&quot;))</formula>
    <inlineHelpText>A read only forumla field calculated from the opportunity&apos;s STAGE, used for reporting purposes.</inlineHelpText>
    <label>Opp Status</label>
    <type>Text</type>
</CustomField>