force-app/main/default/objects/Opportunity/fields/Opportunity_Category__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Category__c</fullName>
    <label>Opportunity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>Recreational</fullName>
            </value>
            <value>
                <fullName>Religious</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Single-Family</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
                <isActive>false</isActive>
                <label>Inventory</label>
            </value>
            <value>
                <fullName>LTD Cross Territory</fullName>
                <isActive>false</isActive>
                <label>LTD Cross Territory</label>
            </value>
            <value>
                <fullName>National Account</fullName>
                <isActive>false</isActive>
                <label>National Account</label>
            </value>
            <value>
                <fullName>Opportunity Buy</fullName>
                <isActive>false</isActive>
                <label>Opportunity Buy</label>
            </value>
            <value>
                <fullName>Out of Territory</fullName>
                <isActive>false</isActive>
                <label>Out of Territory</label>
            </value>
            <value>
                <fullName>Residential - New Construction</fullName>
                <isActive>false</isActive>
                <label>Residential - New Construction</label>
            </value>
            <value>
                <fullName>Residential - Remodel</fullName>
                <isActive>false</isActive>
                <label>Residential - Remodel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>