force-app/main/default/objects/Opportunity/fields/Opportunity_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Estimate__c</fullName>
    <description>The estimated amount of the full project from start to finish.</description>
    <inlineHelpText>The estimated amount of the full project from start to finish.</inlineHelpText>
    <label>Opportunity Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>