force-app/main/default/objects/Opportunity/fields/Opportunity_ID_for_Kerridge__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_for_Kerridge__c</fullName>
    <displayFormat>OPP-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Opportunity ID for Kerridge</label>
    <type>AutoNumber</type>
</CustomField>