force-app/main/default/objects/Opportunity/fields/Opportunity_Stagevalue__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stagevalue__c</fullName>
    <label>Opportunity Stagevalue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>