force-app/main/default/objects/Opportunity/fields/Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_URL__c</fullName>
    <description>Displays URL of opportunity record in Salesforce</description>
    <label>Opportunity URL</label>
    <type>Url</type>
</CustomField>