force-app/main/default/objects/Opportunity/fields/OppportunityId__c.field-meta.xml
<CustomField>
    <fullName>OppportunityId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppportunityId</label>
    <type>Text</type>
</CustomField>