force-app/main/default/objects/Opportunity/fields/Owner_End_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_End_Client_Name__c</fullName>
    <label>Owner/End-Client Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>