force-app/main/default/objects/Opportunity/fields/Owner_Selected__c.field-meta.xml
<CustomField>
    <fullName>Owner_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field is the end user is making the selection, as opposed to a designer or an in house specification.</inlineHelpText>
    <label>Owner Selected</label>
    <type>Checkbox</type>
</CustomField>