force-app/main/default/objects/Opportunity/fields/Product_CleanUp__c.field-meta.xml
<CustomField>
    <fullName>Product_CleanUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product CleanUp</label>
    <type>Checkbox</type>
</CustomField>